Fix large gaps.

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -154,7 +154,7 @@ body.dark-theme #sidebar {
 }
 
 main {
-   margin: 2rem 4rem;
+   margin: 0.8rem 0.8rem;
    flex-grow: 1;
    transition: margin-left 0.3s ease;
 }
@@ -164,7 +164,7 @@ main {
    flex-wrap: wrap;
    justify-content: flex-start;
    max-width: 100%;
-   gap: 1.3rem;
+   gap: 1rem;
 }
 
 .file-box,
@@ -186,15 +186,15 @@ main {
    align-items: center;
    border: 1px solid var(--border-color);
    border-radius: 5px;
-   padding: 1rem 0.5rem;
+   padding: 0.5rem 0.5rem;
    background-color: var(--primary-text-color);
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-   gap: 0.5rem;
+   gap: 0.2rem;
    word-break: break-word;
    word-wrap: break-word;
    width: 100%;
    flex: 1 1 calc(33.33% - 1.3rem); /* Cards will take up roughly 1/3 of the row minus the gap */
-   min-width: 250px; /* Prevents cards from becoming too small */
+   min-width: 350px; /* Prevents cards from becoming too small */
 }
 .card-wrapper .card-info {
    display: flex;
